@@ -14,6 +14,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+25 Nov 2014 Makoto Asai (hadr-deex-V10-00-25)
+----------------------------------------------------------
+- G4NuclearLevelManager - remove unnecessary data members to reduce
+  the memory consumption.
+
 21 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-24)
 ----------------------------------------------------------
 - G4ContinuumGammaTransition, G4ContinuumGammaDeexcitation,
